# scaling-dollop

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  celerybeat-schedule  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/core/: signals.py  urls.py
backend/core/admin/: __init__.py
backend/core/engine/: compliance.py  labels.py  payday.py  processor.py  rules.py  state_machine.py
backend/core/migrations/: 0001_initial.py  0002_account_tier_trial.py  0003_add_subscriber_and_subscriber_failure.py  0004_stripeconnection_unique_stripe_user_id.py  0005_add_company_name_to_account.py  0006_add_dpa_engine_mode_to_account.py  0007_subscriber_fsm_status.py  0008_add_dead_letter_log.py  0009_add_retry_tracking_fields.py  0010_add_payment_method_fingerprint.py  0011_subscriber_excluded_and_pending_action.py  0012_notification_models.py  0013_account_notification_tone.py  0014_notification_unique_sent_per_failure.py  0015_add_dpa_version_to_account.py
backend/core/models/: __init__.py  account.py  audit.py  base.py  dead_letter.py  notification.py  pending_action.py  subscriber.py
backend/core/serializers/: account.py  actions.py  dashboard.py  password_reset.py  subscribers.py
backend/core/services/: audit.py  dpa.py  email.py  email_templates.py  encryption.py  failure_ingestion.py  optout_token.py  recovery.py  stripe_client.py  tier.py
backend/core/tasks/: __init__.py  notifications.py  retry.py  (+3 more)
backend/safenet_backend/: celery.py  urls.py  wsgi.py
(+212 files in other folders)
